<resources>
    <string name="app_name">TaskApp</string>
    <string name="task_list_heading">Task List</string>
    <string name="add_task">Add Task</string>

    <string name="title">Title : </string>
    <string name="date">Date : </string>
    <string name="time">Time : </string>
    <string name="description">Description : </string>
    <string name="status">Description : </string>


    <string name="editbtn">Edit</string>
    <string name="deletebtn">Delete</string>
    <string name="cancel">Cancel</string>

    <string name="alert_title"> Add New Task</string>

    <string name="all_task">All Tasks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_app">Open App</string>
    <string name="addTaskHeading">ADD NEW TASK\n</string>
    <string name="edit_task">Edit Task\n</string>
    <string name="view_all_tasks">View All</string>
</resources>